Transpile typescript to javascript with webpack.
Now ```make``` command builds html/viewer.js. And ```make clean``` command deletes it.
TypeScript is transpiled to es6 with tsc, and it is transpiled to es5 with babel.

--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
 <meta charset='utf-8' />
 <title>File viewer</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<script src='./viewer.js' type='text/javascript' defer></script>
 </head>
 <body>
 <div id='main'></div>
